//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Links {
  id String [pk]
  url String [not null]
  note_id String
  created_at DateTime [default: `now()`]
  notes Notes
}

Table Notes {
  id String [pk]
  title String
  time String
  user_id String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  content String
  isUrgent String
  links Links [not null]
}

Table Faq {
  id String [pk]
  question String [not null]
  answer String [not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  Products Products [not null]
}

Table Files {
  id String [pk]
  link String [not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  Products Products [not null]
  Reviewers Reviewers [not null]
}

Table Reviewers {
  id String [pk]
  name String [not null]
  description String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  Files Files [not null]
  Products Products [not null]
}

Table Accounts {
  id String [pk]
  site String
  tool String
  email String
  password String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  permissions Permissions [not null]
}

Table Permissions {
  id String [pk]
  name String [unique, not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  description String
  Accounts Accounts [not null]
  Products Products [not null]
  Users Users [not null]
}

Table Products {
  id String [pk]
  price String
  description String
  photo String
  time String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  name String [not null]
  stock String
  active Boolean
  Payments Payments [not null]
  Faq Faq [not null]
  Files Files [not null]
  Permissions Permissions [not null]
  Reviewers Reviewers [not null]
}

Table Requests {
  id String [pk]
  url String
  method String
  body String
  cookies String
  status Boolean
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  tools String
  description String
}

Table Users {
  id String [pk]
  name String [not null]
  number String
  status String
  role String
  email String [unique, not null]
  password String [not null]
  refresh_Token String
  deviceLimit Int [default: 4]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  stripe_customer_id String
  isEmailConfirmed Boolean
  plataform String
  Address Address [not null]
  Discount Discount [not null]
  Payments Payments [not null]
  Subscription Subscription [not null]
  permissions Permissions [not null]
  Devices Devices [not null]
}

Table Devices {
  id String [pk]
  name String [not null]
  userId String [not null]
  user_agent String [not null]
  device String [not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  Users Users [not null]
}

Table Subscription {
  id String [pk]
  userId String [not null]
  stripe_subscription_id String [not null]
  status String
  active Boolean [not null]
  current_period_start DateTime
  current_period_end DateTime
  cancel_at_period_end Boolean [not null]
  cancel_at DateTime
  canceled_at DateTime
  ended_at DateTime
  default_payment_method String
  metadata String
  Users Users [not null]
}

Table Address {
  id String [pk]
  billing_details_id String
  city String [not null]
  country String [not null]
  postal_code String [not null]
  state String [not null]
  line1 String [not null]
  metadata String
  userId String [not null]
  Users Users [not null]
}

Table Payments {
  id String [pk]
  receiptId String [not null]
  method method [not null]
  status String [not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  productId String [not null]
  userId String [not null]
  products Products [not null]
  Users Users [not null]
}

Table Price {
  id String [pk]
  subscription_id String [not null]
  stripe_price_id String [not null]
  stripe_product_id String [not null]
  amount Int [not null]
  label String [not null]
  description String [not null]
}

Table Coupon {
  id String [pk]
  stripe_coupon_id String [not null]
  valid Boolean [not null]
  amount_off Int [not null]
  currency String [not null]
  duration String [not null]
  duration_in_months Int [not null]
  max_redemptions Int [not null]
  redeem_by DateTime [not null]
  times_redeemed Int [not null]
  discount_id String [not null]
  metadata String [not null]
}

Table Discount {
  id String [pk]
  stripe_discount_id String [not null]
  subscription_id String [not null]
  user_id String [not null]
  start DateTime [not null]
  end DateTime [not null]
  promo_code String [not null]
  metadata String [not null]
  user Users [not null]
}

Enum method {
  CREDIT_CARD
  DEBIT_CARD
  BANK_SLIP
  PIX
}

Ref: Links.note_id > Notes.id [delete: Cascade]

Ref: Devices.userId > Users.id [delete: Cascade]

Ref: Subscription.userId > Users.id [delete: Cascade]

Ref: Address.userId > Users.id [delete: Cascade]

Ref: Payments.productId > Products.id [delete: Cascade]

Ref: Payments.userId > Users.id [delete: Cascade]

Ref: Discount.user_id > Users.id [delete: Cascade]